revisions bread-crumns

--- a/css/style.css
+++ b/css/style.css
@@ -87,8 +87,14 @@ body {
 }
 
 .breadcrumbs__inner {
+  display: flex;
   margin-left: 40px;
   margin-top: 16px;
+}
+
+.breadcrumbs__list {
+  display: flex;
+  justify-content: space-between;
 }
 
 .breadcrumbs__list li a {
