--- a/sass/Global/BreadCrumns.sass
+++ b/sass/Global/BreadCrumns.sass
@@ -1,6 +1,11 @@
 .breadcrumbs__inner
+  display: flex
   margin-left: 40px
   margin-top: 16px
+
+.breadcrumbs__list
+  display: flex
+  justify-content: space-between
 
 .breadcrumbs__list li a
   text-decoration: none
@@ -10,7 +15,3 @@
 .breadcrumbs__list li span
   color: $text
   font-weight: bold
-
-
-
-
