--- a/sass/Global/footer/footer-link.sass
+++ b/sass/Global/footer/footer-link.sass
@@ -1,12 +1,11 @@
 .footer1-menu
-    display: flex
-    justify-content: space-between
-
+  display: flex
+  justify-content: space-between
 
 .footer1-menu li
-    display: inline-block
-    margin-right: 12px
-    margin-left: 12px
+  display: inline-block
+  margin-right: 12px
+  margin-left: 12px
 
 .flink
   position: relative
@@ -27,7 +26,6 @@
   font-size: 16px
   line-height: 24px
 
-
 .flink-line
   position: absolute
   display: block
@@ -47,7 +45,6 @@
   transition-delay: 0.25s
   //transition-delay - задержка
 
-
 .flink-line-bottom
 
   bottom: 0
@@ -60,7 +57,6 @@
   right: 100%
   transition: 1s
   transition-delay: 0.25s
-
 
 .flink-line-left
   bottom: -100%
@@ -104,3 +100,6 @@
 .flink a
   text-decoration: none
   position: relative
+
+.lol
+  padding-bottom: 320px
