--- a/sass/main/slider.sass
+++ b/sass/main/slider.sass
@@ -2,7 +2,7 @@
   padding: 20px 0px 10px
 
 .slider__item
-  background-image: url(../img/main/BisLite_slider.png)
+  background-image: url(../img/main/article3.png)
   min-height: 440px
   background-position: top center
   background-size: cover
@@ -35,11 +35,11 @@
     display: none
 
   /* расстояние между кружочками
-  margin: 0 9px
+    margin: 0 9px
 
   /* 9, чтобы между двумя кружочками получилось 18
-  width: auto
-  height: auto
+    width: auto
+    height: auto
 
 .items
   background-color: #e8ebf1
@@ -125,7 +125,7 @@
   border-top: 1px solid #dfe1e5
 
   /*добавить линию толщина тип и цвет
-  border-bottom: 1px  solid #dfe1e5
+  border-bottom: 1px solid #dfe1e5
 
 .slick-arrow
   width: 20px
