--- a/sass/main/slider.sass
+++ b/sass/main/slider.sass
@@ -7,6 +7,7 @@
   background-position: top center
   background-size: cover
   background-repeat: no-repeat
+  border-radius: 14px
 
 /* position, size, repeat нужны для мобильной версии
 
@@ -35,11 +36,11 @@
     display: none
 
   /* расстояние между кружочками
-    margin: 0 9px
+   margin: 0 9px
 
   /* 9, чтобы между двумя кружочками получилось 18
-    width: auto
-    height: auto
+   width: auto
+   height: auto
 
 .items
   background-color: #e8ebf1
