--- a/sass/Global/footer/footer-link.sass
+++ b/sass/Global/footer/footer-link.sass
@@ -26,6 +26,9 @@
   font-size: 16px
   line-height: 24px
 
+.flink-text:hover
+  color: yellow
+
 .flink-line
   position: absolute
   display: block
