--- a/sass/main/articles.sass
+++ b/sass/main/articles.sass
@@ -1,9 +1,11 @@
+body
+  background-color: transparent
+
 .list_article
   margin-top: 25px
   margin-left: 20px
   display: flex
   justify-content: space-between
-
 
 .image-article
   max-width: 300px
@@ -20,11 +22,8 @@
 
   /* Убираем небольшой отступ снизу */
 
-
-
 .article img:hover
   transform: scale(1.2)
-
 
 .list_reviews
   margin-top: 20px
@@ -32,7 +31,6 @@
   margin-bottom: 20px
   display: flex
   justify-content: space-between
-
 
 .content-reviews
   max-width: 300px
@@ -43,15 +41,12 @@
 
 /*что не попадает в блок - скрыто*/
 
-
 .botton_news
   display: flex
   justify-content: center
-
 
 .title-article
   text-align: center
 
   a
     text-decoration: none
-
