--- a/sass/main/articles.sass
+++ b/sass/main/articles.sass
@@ -24,6 +24,8 @@ body
 
 .article img:hover
   transform: scale(1.2)
+.article:hover .title-article a
+  color: darkred
 
 .list_reviews
   margin-top: 20px
@@ -50,3 +52,9 @@ body
 
   a
     text-decoration: none
+    color: yellow
+    transition: 0.5s
+
+  a:hover
+    text-decoration: none
+    color: darkred
