--- a/sass/main/games.sass
+++ b/sass/main/games.sass
@@ -3,6 +3,7 @@
   text-align: center
   margin-bottom: 50px
   button
+    border-radius: 10px
     padding: 12px 21px
     border: none
     background-color: #fff
@@ -29,7 +30,6 @@
   overflow: hidden
   border-radius: 14px
 
-
   &-img
     min-height: 250px
     background-repeat: no-repeat
@@ -38,7 +38,6 @@
     background-size: cover
     background-image: url(img/article1.jpg)
     transition: 1s
-
 
   &-img:hover
     transform: scale(1.2)
@@ -60,6 +59,3 @@
 
   &-category
     display: block
-
-
-
