--- a/sass/GamesList/GamesList.sass
+++ b/sass/GamesList/GamesList.sass
@@ -5,7 +5,6 @@
   display: flex
   justify-content: space-between
 
-
 .image-games
   max-width: 300px
   max-height: 150px
@@ -21,10 +20,10 @@
 
 /* Убираем небольшой отступ снизу */
 
-
-
 .games img:hover
   transform: scale(1.2)
+.games:hover .title-games a
+  color: darkred
 
 .footer-inner
   padding-left: 20px
@@ -32,17 +31,9 @@
 .container
   width: 1139px
 
-
-
 .title-games
   text-align: center
 
   a
     text-decoration: none
-
-
-
-
-
-
-
+    transition: 0.5s
