--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,5 +18,6 @@
 @import "Global/footer/footer2-content"
 @import "Global/footer/footer2-Andrusha-Editions"
 @import "Global/footer/footer-social-network"
+@import "Global/header/header"
 @import "404/spider"
 @import "404/Title"
