--- a/sass/style.sass
+++ b/sass/style.sass
@@ -19,5 +19,6 @@
 @import "Global/footer/footer2-Andrusha-Editions"
 @import "Global/footer/footer-social-network"
 @import "Global/header/header"
+@import "Global/header/header-link"
 @import "404/spider"
 @import "404/Title"
