--- a/sass/Global/global.sass
+++ b/sass/Global/global.sass
@@ -29,7 +29,7 @@ body
   font-size: 36px
   font-weight: 300
   word-break: break-word
-  color: rgb(162, 181, 198)
+  color: darkyellow
   margin: 0 auto
   text-align: center
   padding-top: 20px
@@ -37,6 +37,6 @@ body
 
 .test-standart
   width: 1200px
-  color: rgb(162, 181, 198)
+  color: darkblue
   font-size: 20px
   text-align: center
