add popap-registration in animate on 404

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -21,5 +21,6 @@
 @import "Global/header/header"
 @import "Global/header/header-link"
 @import "Global/header/popap-enter"
+@import "Global/header/popap-registration"
 @import "404/spider"
 @import "404/Title"
