add page Calc-iOS

--- a/sass/GamesOne/GamesOne-Tabs.sass
+++ b/sass/GamesOne/GamesOne-Tabs.sass
@@ -2,7 +2,6 @@
   position: relative
   overflow: hidden
 
-
 .btn-box
   display: flex
   border-bottom: 1px solid #ccc
@@ -20,11 +19,13 @@
     button:hover
       color: #ff7846
 
-
 .tabs-content__right img
   width: 350px
   margin-right: 20px
-  border-radius: 14px
+
+tabs-content__right-calc img
+  width: 350px
+  margin-right: 50px
 
 .tabs-content
   display: flex
@@ -37,7 +38,6 @@
 
   &__left
     flex-basis: 60%
-
 
     p
       padding: 10px 0
@@ -53,16 +53,13 @@
       color: red
       text-align: center
 
-
   &__right
     flex-basis: 50%
     text-align: left
     padding: 24px
-
 
 #content1
   transform: translateX(0px)
 
 #btn1
   color: #ff7846
-
