--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,10 @@ body {
   text-align: center;
 }
 
+img {
+  border-radius: 14px;
+}
+
 @font-face {
   font-family: "icomoon";
   src: url("../fonts/icomoon.eot?xx996d");
@@ -223,7 +227,7 @@ body {
   transition: 1s;
 }
 .product__item-img:hover {
-  transform: scale(1.2);
+  transform: scale(1.48);
 }
 .product__item-content {
   display: flex;
@@ -433,7 +437,7 @@ body {
   margin: 0 auto;
   padding-left: 400px;
   width: 100%;
-  height: 100vh;
+  height: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -619,7 +623,11 @@ body {
 .tabs-content__right img {
   width: 350px;
   margin-right: 20px;
-  border-radius: 14px;
+}
+
+tabs-content__right-calc img {
+  width: 350px;
+  margin-right: 50px;
 }
 
 .tabs-content {
