--- a/sass/main/slider.sass
+++ b/sass/main/slider.sass
@@ -4,12 +4,10 @@
 .slider__item
   background-image: url(../img/main/article3.png)
   min-height: 440px
-  background-position: top center
+  background-position: center
   background-size: cover
   background-repeat: no-repeat
   border-radius: 14px
-
-/* position, size, repeat нужны для мобильной версии
 
 .slider__item-title
   font-size: 50px
@@ -61,7 +59,6 @@
   line-height: 20px
   text-transform: uppercase
 
-  /*чтобы все были с большой буквы
   padding: 10px 0 0 60px
   margin-bottom: 30px
   position: relative
@@ -89,8 +86,6 @@
     left: 0
     top: 4px
     width: 5px
-
-    /*для background-image укажем высоту и ширину нашей стрелки
     height: 7px
 
 .works__title
@@ -107,8 +102,6 @@
     top: 20px
     background-image: url(../icons/cursor.png)
     width: 14px
-
-    /*обязательно нужно поставить размер для background-image
     height: 24px
 
 .works__inner-item
@@ -124,8 +117,6 @@
 .works__inner
   padding: 20px 0px 40px
   border-top: 1px solid #dfe1e5
-
-  /*добавить линию толщина тип и цвет
   border-bottom: 1px solid #dfe1e5
 
 .slick-arrow
@@ -156,9 +147,6 @@
 .works__inner-box
   z-index: 2
   display: inline-block
-
-/*                          чтобы внутренний элемент не вылазил за границы
- * ширина элемента будет такая сколько там контента внутри а block значит что там буду работать блочные свойства
 
 .works__inner-link
   background-color: black
