--- a/css/style.css
+++ b/css/style.css
@@ -1402,6 +1402,15 @@ input::placeholder {
   color: white;
 }
 
+.pageup {
+  display: none;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  width: 40px;
+  height: 40px;
+}
+
 html {
   background: lightseagreen;
 }
