--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,6 +22,7 @@
 @import "Global/header/header-link"
 @import "Global/header/popap-enter"
 @import "Global/header/popap-registration"
+@import "Global/pageup"
 @import "404/spider"
 @import "404/Title"
 @import "main/advertisement"
