--- a/sass/style.sass
+++ b/sass/style.sass
@@ -26,3 +26,4 @@
 @import "404/spider"
 @import "404/Title"
 @import "Global/advertisement"
+@import "../app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS"
