--- a/sass/GamesOne/GamesOne-Tabs.sass
+++ b/sass/GamesOne/GamesOne-Tabs.sass
@@ -1,6 +1,8 @@
-.tabs-content-inner
+.tabs-inner
   position: relative
   overflow: hidden
+  width: 1200px
+  height: 360px
 
 .btn-box
   display: flex
@@ -15,6 +17,7 @@
     margin-right: 50px
     font-size: 20px
     font-weight: bold
+    transition: 0.7s
 
     button:hover
       color: #ff7846
