--- a/sass/style.sass
+++ b/sass/style.sass
@@ -27,3 +27,4 @@
 @import "404/Title"
 @import "Global/advertisement"
 @import "../app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS"
+@import "../app/TicTacToe/sass/TicTacToe"
