--- a/sass/Global/footer/footer-link.sass
+++ b/sass/Global/footer/footer-link.sass
@@ -6,6 +6,10 @@
   display: inline-block
   margin-right: 12px
   margin-left: 12px
+  @media only screen and (max-width: 677px)
+    display: flex
+    justify-content: center
+    flex-direction: column
 
 .flink
   position: relative
