--- a/sass/Global/footer/footer1.sass
+++ b/sass/Global/footer/footer1.sass
@@ -2,6 +2,11 @@
   display: flex
   justify-content: space-between
 
+  @media only screen and (max-width: 677px)
+    display: flex
+    justify-content: center
+    flex-direction: column
+
 .mushroom1
   opacity: 0
 
@@ -10,6 +15,14 @@
   height: 115px
   width: 115px
   background-color: transparent
+
+  @media only screen and (max-width: 677px)
+    margin-top: 12px
+
+  &:nth-child(2)
+    @media only screen and (max-width: 677px)
+      display: none
+
   & img
     position: absolute
     width: 100%
@@ -18,11 +31,6 @@
 .mushroom1:hover
   opacity: 1
 
-
-
-
 .footer1-img img
   width: 80%
   height: 100%
-
-
