--- a/sass/Global/footer/footer2-Andrusha-Editions.sass
+++ b/sass/Global/footer/footer2-Andrusha-Editions.sass
@@ -1,16 +1,16 @@
 .footer2-content-down-creature
+  font-family: Arial, Helvetica, sans-serif
+  text-decoration: none
+  position: relative
+  display: inline-block
   margin-top: 20px
   font-size: 24px
   font-weight: 300
   color: lightskyblue
   text-align: center
 
-
-.footer2-content-down-creature
-  font-family: Arial, Helvetica, sans-serif
-  text-decoration: none
-  position: relative
-  display: inline-block
+  @media only screen and (max-width: 677px)
+    display: none
 
 .footer2-content-down-creature:before,
 .footer2-content-down-creature:after
@@ -46,6 +46,11 @@
   transition: all 1s ease 0s /* плавность анимации */
   top: 0
   overflow: hidden
+
+  @media only screen and (max-width: 677px)
+    height: 30px
+    padding: 0
+    transition: none
 
 .footer2-content-down-creature-text:before,
 .footer2-content-down-creature-text:after
@@ -85,7 +90,6 @@
 .footer2-content-down-creature:hover .footer2-content-down-creature-text:before
   width: 100%
 
-
 .footer2-content-down-creature:active .footer2-content-down-creature-text
   top: -7px
   transition: all 2s ease 0s
@@ -97,7 +101,3 @@
 
   0%
     transform: rotate(360deg)
-
-
-
-
