--- a/sass/GamesOne/GamesOne.sass
+++ b/sass/GamesOne/GamesOne.sass
@@ -1,11 +1,13 @@
 .img-inner
- display: flex
- justify-content: center
+  display: flex
+  justify-content: center
 
 .Game_img
   display: inline-block
   border-radius: 14px
   overflow: hidden
+  width: 500px
+  height: 500px
 
 .Game_img img
   transition: 1s /* Время эффекта */
@@ -16,9 +18,3 @@
 
 .footer-inner
   padding-top: 300px
-
-
-
-
-
-
