--- a/sass/GamesOne/GamesOne.sass
+++ b/sass/GamesOne/GamesOne.sass
@@ -1,20 +1,20 @@
-.img-inner
+.list_games
   display: flex
-  justify-content: center
+  justify-content: space-around
 
-.Game_img
-  display: inline-block
+.image-games-one
+  display: block
+  margin: 0 auto
   border-radius: 14px
   overflow: hidden
-  width: 500px
-  height: 500px
+  width: 400px
+  height: 400px
 
-.Game_img img
+.image-games-one img
   transition: 1s /* Время эффекта */
   display: block
+  width: 400px
+  height: 400px
 
-.Game_img img:hover
+.image-games-one img:hover
   transform: scale(1.2)
-
-.footer-inner
-  padding-top: 300px
