--- a/css/style.css
+++ b/css/style.css
@@ -667,6 +667,33 @@ tabs-content__right-calc img {
   color: #ff7846;
 }
 
+.button-For-Like {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  animation: pulse 1.2s ease infinite;
+  background: red;
+  color: darkblue;
+  font-size: 18px;
+}
+.button-For-Like button {
+  background: transparent;
+  border: none;
+  color: white;
+  font-size: 48px;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    transform: scale(1.5);
+  }
+}
 .footer1 {
   display: flex;
   justify-content: space-between;
