--- a/sass/GamesOne/GamesOne-Tabs.sass
+++ b/sass/GamesOne/GamesOne-Tabs.sass
@@ -66,3 +66,26 @@ tabs-content__right-calc img
 
 #btn1
   color: #ff7846
+
+.button-For-Like
+  width: 140px
+  height: 140px
+  border-radius: 50%
+  animation: pulse 1.2s ease infinite
+  background: red
+  color: darkblue
+  font-size: 18px
+
+  button
+    background: transparent
+    border: none
+    color: white
+    font-size: 48px
+
+@keyframes pulse
+  0%
+    transform: scale(1.0)
+  50%
+    opacity: 0.3
+  100%
+    transform: scale(1.5)
