--- a/sass/GamesOne/GamesOne-Tabs.sass
+++ b/sass/GamesOne/GamesOne-Tabs.sass
@@ -75,12 +75,14 @@ tabs-content__right-calc img
   background: red
   color: darkblue
   font-size: 18px
+  cursor: pointer
 
   button
     background: transparent
     border: none
     color: white
     font-size: 48px
+    cursor: pointer
 
 @keyframes pulse
   0%
