--- a/sass/main/reviews.sass
+++ b/sass/main/reviews.sass
@@ -1,7 +1,57 @@
 .title-reviews
+  width: 300px
+  height: 100px
+  display: flex
+  justify-content: space-around
   text-align: center
   text-decoration: none
-.title-reviews
+.link-review
+  width: 230px
+  display: flex
+  justify-content: center
+  flex-direction: column
+  height: 70px
   a
     text-decoration: none
 
+.img-reviews
+  overflow: hidden
+  border-radius: 50%
+  img
+    width: 70px
+    height: 70px
+    border-radius: 50%
+    transition: 1s
+
+  img:hover
+    transform: scale(1.2)
+
+.link-review-name
+  color: blue
+  transition: 1s
+  font-size: 18px
+  user-select: none
+
+.link-review-text
+  a
+    color: orange
+    transition: 1s
+    font-size: 24px
+
+.content-reviews
+  a
+    transition: 1s
+    text-decoration: none
+    color: darkgreen
+
+.reviews:hover
+
+  .link-review-name
+    color: red
+
+  .link-review-text a
+    color: yellow
+    text-decoration: underline
+
+  .content-reviews a
+    color: yellow
