--- a/sass/Global/footer/footer-link.sass
+++ b/sass/Global/footer/footer-link.sass
@@ -18,7 +18,7 @@
   overflow: hidden
   border-radius: 14px
   transition: 1s
-  background: linear-gradient(180deg, transparent, red )
+  background: linear-gradient(180deg, transparent, #295FFE )
 
 .flink-text
   text-decoration: none
