--- a/sass/main/reviews.sass
+++ b/sass/main/reviews.sass
@@ -1,3 +1,12 @@
+.reviews
+  cursor: pointer
+  padding: 20px
+  transition: 1s
+  border-radius: 14px
+  &:hover
+    border: 0.5px dashed yellow
+    background-color: rgba(255, 255, 0, 0.1)
+
 .title-reviews
   width: 300px
   height: 100px
