--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,7 +5,9 @@
 @import "main/articles"
 @import "main/games"
 @import "main/reviews"
-@import "main/slider"
+@import "main/DepositCalc/DepositTime"
+@import "main/DepositCalc/DepositCalc"
+@import "main/slider2"
 @import "article/PackOfMoney"
 @import "article/ArticleContent"
 @import "GamesList/GamesList"
@@ -23,7 +25,7 @@
 @import "Global/header/popap-enter"
 @import "Global/header/popap-registration"
 @import "Global/pageup"
-@import "404/spider"
+@import "404/spider2"
 @import "404/Title"
 @import "Global/advertisement"
 @import "../app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS"
