--- a/sass/Global/header/header-link.sass
+++ b/sass/Global/header/header-link.sass
@@ -15,7 +15,7 @@
   overflow: hidden
   border-radius: 14px
   transition: 1s
-  background: linear-gradient(180deg, transparent, red )
+  background: linear-gradient(180deg, transparent, #295FFE )
 
 .hlink-text
   text-decoration: none
